cmake_minimum_required(VERSION 2.6)
project(media-of-two-sorted-array)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
enable_testing()
find_package (Threads)
include_directories(${PROJECT_SOURCE_DIR}/../include)
link_directories(${PROJECT_SOURCE_DIR}/../lib/gtest)
add_executable(main main.cpp)
target_link_libraries(main gtest ${CMAKE_THREAD_LIBS_INIT})
add_test(NAME test1 COMMAND test1)

